[tool.poetry]
name = "probability"
version = "0.1.0"
description = ""
authors = ["Miyazawa Akira <pecorarista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
